# natasha_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py  start.py
bot/db/: fetch.py  sqlite.py  supabase.py
bot/handlers/: cockgame.py  handler.py  roulette.py  scheduler.py
