[tool.poetry]
name = "natasha-bot"
version = "0.1.0"
description = ""
authors = ["Slava Kuryaev <92830706+necrosskull@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "natasha_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-telegram-bot = { extras = ["job-queue", "rate-limiter"], version = "20.4" }
update = "^0.0.1"
peewee = "^3.16.2"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
